WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238830
[ Mac ] accessibility/mac/expanded-notification.html is a flaky text failure
https://bugs.webkit.org/show_bug.cgi?id=238830
Summary
[ Mac ] accessibility/mac/expanded-notification.html is a flaky text failure
Dawn Morningstar
Reported
2022-04-05 13:49:12 PDT
accessibility/mac/expanded-notification.html is a flaky text failure on Mac queues. failure was reproducible at Monterey TOT using run-webkit-tests accessibility/mac/expanded-notification.html --iterations 1000 HISTORY:
https://results.webkit.org/?suite=layout-tests&test=accessibility%2Fmac%2Fexpanded-notification.html&limit=10176
DIFF: --- /Volumes/Data/worker/bigsur-release-tests-wk2/build/layout-test-results/accessibility/mac/expanded-notification-expected.txt +++ /Volumes/Data/worker/bigsur-release-tests-wk2/build/layout-test-results/accessibility/mac/expanded-notification-actual.txt @@ -6,7 +6,7 @@ Initial expanded status: false Received notification: AXExpandedChanged -Expanded status: true +Expanded status: false Received notification: AXExpandedChanged Expanded status: false PASS successfullyParsed is true DIFF-URL:
https://build.webkit.org/results/Apple-BigSur-Release-WK2-Tests/r289954%20(7906)/accessibility/mac/expanded-notification-diff.txt
Attachments
Patch
(8.84 KB, patch)
2022-04-06 13:12 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-05 13:49:38 PDT
<
rdar://problem/91313419
>
Dawn Morningstar
Comment 2
2022-04-05 14:34:44 PDT
marking expectations
r292420
Andres Gonzalez
Comment 3
2022-04-06 13:12:56 PDT
Created
attachment 456853
[details]
Patch
EWS
Comment 4
2022-04-06 18:22:23 PDT
Committed
r292520
(
249358@main
): <
https://commits.webkit.org/249358@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456853
[details]
.
Dawn Morningstar
Comment 5
2022-04-08 11:20:36 PDT
Reverted
r292521
for reason: This broke the test further. Committed
r292625
(
249445@trunk
): <
https://commits.webkit.org/249445@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug