[ Mac ] accessibility/mac/expanded-notification.html is a flaky text failure https://bugs.webkit.org/show_bug.cgi?id=238830 rdar://91313419

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/mac/expanded-notification.html

This patch fixes the flackiness of this test and also fixes this test
in isolated tree mode that was timing out.
Instead of AXIsolatedTree::updateChildren on the AXExpandedChanged
notification, we now update the ISExpanded property in the target object.
If new children are added or removed from the tree as the result of an
element's expanded state change, those tree mutations should generate
separate AXChildrenChanged notifications.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateIsolatedTree):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):

LayoutTests:

Fixes the flakiness by checking the number of notifications received in
the same async block where the changes are occuring. This now passes
with no flakiness in both isolated tree mode on and off.

* accessibility/mac/expanded-notification-expected.txt:
* accessibility/mac/expanded-notification.html:
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/249358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292520 268f45cc-cd09-0410-ab3c-d52691b4dbfc